...
                                <rect key="frame" x="30" y="400" width="540" height="50"/>
                                <color key="backgroundColor" red="0.91096580028533936" green="0.0" blue="0.3120763897895813" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="E7c-qx-NES"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="15"/>
                                <state key="normal" title="CONTINUE">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="continueButtonAction:" destination="Hu8-dS-o14" eventType="touchUpInside" id="b06-SK-0V8"/>
                                </connections>
                            </button>
...
                                    <action selector="facebookClicked:" destination="bot-Xh-qi6" eventType="touchUpInside" id="muf-TU-kNv"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="ONQ-dg-eu2" userLabel="váš EMAIL" customClass="BFButton">
                                <rect key="frame" x="40" y="162.5" width="295" height="50"/>
                                <color key="backgroundColor" red="0.91096580028533936" green="0.0" blue="0.3120763897895813" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="EMAIL"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="0qx-8i-8YP"/>
                                    <constraint firstAttribute="height" constant="50" id="ABX-zC-KoZ"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="adn-CO-A0s"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="lUM-rV-6P8"/>
                                    <constraint firstAttribute="height" constant="100" id="ydv-xA-lAP"/>
...
                                    <outlet property="delegate" destination="6hJ-nt-XDg" id="wYm-bd-wzc"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Joq-ID-191" customClass="BFButton">
                                <rect key="frame" x="25" y="175" width="230" height="48"/>
                                <color key="backgroundColor" red="0.91096580028533936" green="0.0" blue="0.3120763897895813" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" label="LOGIN"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="1bF-JU-RCy"/>
                                    <constraint firstAttribute="width" constant="224" id="Gf5-RF-hWz"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="15"/>
                                <state key="normal" title="PŘIHLÁSIT SE">
...
            <point key="canvasLocation" x="1740" y="692"/>
        </scene>
        <!--Cart-->
        <scene sceneID="n0B-rB-mwL">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qPr-dg-Jd0" customClass="BFProductsNavigationController" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="2" title="Cart" image="TabBarCartUnselected" selectedImage="TabBarCartSelected" id="tSk-om-dxp">
                        <inset key="imageInsets" minX="0.0" minY="2" maxX="0.0" maxY="-2"/>
                    </tabBarItem>
                    <toolbarItems/>
                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics" barStyle="black" translucent="NO"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gag-f9-6Wc">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
...
