...

- (NSAttributedString *)emailTextFieldPlaceholder {
    return [[NSAttributedString alloc] initWithString:BFLocalizedString(kTranslationEmail, @"Email") attributes:@{NSForegroundColorAttributeName:[UIColor blackColor]}];
}

- (NSAttributedString *)passwordTextFieldPlaceholder {
    return [[NSAttributedString alloc] initWithString:BFLocalizedString(kTranslationPassword, @"Password") attributes:@{NSForegroundColorAttributeName:[UIColor blackColor]}];
}


#pragma mark - UITextFieldDelegate

- (void)textFieldDidBeginEditing:(UITextField *)textField {
...
