...
        // add to cart
        else {
            [cell.actionButton addTarget:self action:@selector(addToCartClicked:) forControlEvents:UIControlEventTouchUpInside];
            buttonTitle = [BFLocalizedString(kTranslationAddToCart, @"Add to the cart") uppercaseString];
            image = [UIImage imageNamed:@"TabBarCartUnselected"];
            button.backgroundColor = [UIColor BFN_pinkColor];
            button.accessibilityLabel = @"ADDTOCART";
        }
        
        [button setTitle:buttonTitle forState:UIControlStateNormal];
        [button setImage:image forState:UIControlStateNormal];
    }
}
...
